# RoboOrchardLab

./: .gitmodules  pyproject.toml  setup.py
projects/pi/: README.md  config_pi.py  config_pi_libero.py  convert_to_hobot_checkpoint.py  eval_bridge.sh  train.py  utils.py
projects/pi/assets/physical-intelligence/libero/: norm_stats.json
robo_orchard_lab/dataset/: sampler.py
robo_orchard_lab/dataset/robot/: _hf_dataset.py  dataset.py  dataset_ex.py
robo_orchard_lab/models/pi/: model.py
robo_orchard_lab/pipeline/: trainer.py
tests/test_robo_orchard_lab/dataset/: test_sampler.py
tests/test_robo_orchard_lab/dataset/robot/: test_dataset_ex.py
