[project]
name = "robo_orchard_lab"
dynamic = ["version", "dependencies", "optional-dependencies"]
description = "Deep Learning Algorithms for RoboOrchard"
readme = "README.md"
authors = [{ name = "The RoboOrchard Team" }]

license = "Apache-2.0"
license-files = ["LICENSE", "NOTICE"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
requires-python = ">=3.10"

[project.urls]
Homepage = "https://github.com/HorizonRobotics/robo_orchard_lab"
Repository = "https://github.com/HorizonRobotics/robo_orchard_lab"
Source = "https://github.com/HorizonRobotics/robo_orchard_lab"
Issues = "https://github.com/HorizonRobotics/robo_orchard_lab/issues"

[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-dir]
robo_orchard_lab = "robo_orchard_lab"

[tool.ruff]

exclude = [
    # common
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
    # project
    "3rdparty/*",
    "dummy/*",
    "*.pyi",
    "*_pb2.py",
]

# Same as Black.
line-length = 79
indent-width = 4

# required python 3.10
target-version = "py310"

[tool.ruff.lint]

select = [
    "E",   # flake8-errors
    "F",   # pyflake
    "I",   # isort
    "B",   # flake8-bugber
    "TID", # flake8-tidy-imports
    "D",   # pydocstyle
    "Q",   # flake8-quotes
    "W",   # flake8-warnings
    "N",   # pep8-naming
]

ignore = [
    "D104",
    "D107",
    "D202",
    "D105",
    "D100",
    "D102",
    "D103",
    "D101",
    "D301",
    "F403",
    "B904", # Within an `except` clause, raise exceptions with `raise ... from err` or `raise ... from None` to distinguish them from errors in exception handling
    "B028", # No explicit `stacklevel` keyword argument found
    "D417", # requires documentation for every function parameter.
]

[tool.ruff.lint.isort]
known-third-party = []
no-lines-before = ["future", "standard-library"]
combine-as-imports = true
force-wrap-aliases = true

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.flake8-tidy-imports]
# Disallow all relative imports.
ban-relative-imports = "all"

[tool.ruff.lint.flake8-quotes]
avoid-escape = false

[tool.ruff.lint.mccabe]
max-complexity = 18

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["TID252", "F401"]

[tool.ruff.lint.pep8-naming]
classmethod-decorators = [
    # Allow Pydantic's `@validator` decorator to trigger class method treatment.
    "pydantic.validator",
    # Allow SQLAlchemy's dynamic decorators, like `@field.expression`, to trigger class method treatment.
    "declared_attr",
    "expression",
    "comparator",
]
ignore-names = [
    # ruff default (https://docs.astral.sh/ruff/settings/#lintpep8-naming)
    "setUp",
    "tearDown",
    "setUpClass",
    "tearDownClass",
    "setUpModule",
    "tearDownModule",
    "asyncSetUp",
    "asyncTearDown",
    "setUpTestData",
    "failureException",
    "longMessage",
    "maxDiff",
    # project
    "PROJECT_ROOT",  # project test environment fixture
    "ROBO_ORCHARD_TEST_WORKSPACE",  # project test fixture
    "F",  # import torch.nn.functional as F
]

[tool.ruff.format]

# Like Black, use double quotes for strings.
quote-style = "double"

# Like Black, indent with spaces, rather than tabs.
indent-style = "space"

# Like Black, respect magic trailing commas.
skip-magic-trailing-comma = false

# Like Black, automatically detect the appropriate line ending.
line-ending = "auto"

docstring-code-format = true

[tool.pyright]
enableExperimentalFeatures = false
typeCheckingMode = "basic"
reportRedeclaration = false
include = ["robo_orchard_lab", "tests"]
# exclude = ["robo_orchard_lab/distributed/__init__.py"]

[dependency-groups]
openpi = [
    "torch==2.7.1",
    "datasets==3.6.0",
    "flash-attn==2.8.3",
    "pytest>=8.3.4",
    "ruff>=0.8.6",
    "pre-commit>=4.0.1",
    "ipykernel>=6.29.5",
    "ipywidgets>=8.1.5",
    "lerobot",
    "matplotlib>=3.10.0",
    "pynvml>=12.0.0",
    "chex",
    "huggingface-hub==0.36.2",
]


[tool.uv.sources]
lerobot = { git = "https://github.com/huggingface/lerobot", rev = "0cf864870cf29f4738d3ade893e6fd13fbd7cdb5" }

[tool.uv]
index-strategy = "unsafe-best-match"
find-links = ["https://nvidia-kaolin.s3.us-east-2.amazonaws.com/torch-2.7.1_cu128.html"]

[tool.uv.extra-build-dependencies]
"flash-attn" = ["torch==2.7.1"]
